# c7n-broom

./: .gitignore  .gitlab-ci.yml  .gitmodules  Pipfile  README.md  pylintrc  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
src/c7n_broom/: __init__.py  base.py  data.py  main.py  util.py
src/c7n_broom/actions/: __init__.py  helper.py  main.py  report.py
src/c7n_broom/config/: __init__.py  main.py
src/c7n_broom/config/create/: __init__.py  main.py  policies.py
src/c7n_broom/tests/: __init__.py
tests/: conftest.py
tests/config/: test_create.py
tests/config/_data/: config.yaml  contants.py
