[build-system]
requires = ["setuptools>=40.5.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
not_skip = "__init__.py"
known_project = "c7n_broom"
sections = [ "FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "PROJECT" ]
