# For setuptools configuration see https://setuptools.readthedocs.io.
[metadata]
name = c7n_broom
author = Carlos Meza
author-email = carlos@digitalr00ts.com
description  = Cloud Custodian Broom
description-content-type = text/plain
;long_description = file: README.rst
;long_description_content_type = text/x-rst
;url =
;project_urls =
;    Bug Tracker =
;    Source Code =
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords =
    digitalr00ts

[options]
include_package_data = True
install_requires =
    c7n
    vyper-config >=0.4.0
;dependency_links=
;    git+https://github.com/digitalr00ts/boto-remora.git#egg=boto_remora
packages = find:
package_dir =
    = src
requires-python = >=3.7
setup_requires =
    setuptools_scm
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
;console_scripts =
